--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
 
         <h2>About me</h2>
 
-        <p>BlaBlaBla BlaBlaBla BlaBlaBla BlaBlaBla BlaBlaBla BlaBlaBla BlaBlaBla BlaBlaBla</p>
+        <p>我只想说666</p>
 
         <h2>Contact</h2>
 
