--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -16,6 +16,25 @@
 .site-header a:hover {
     color: #fff;
 }
+.content {
+    width:100%;
+    height:100%;
+    position: relative;
+    background: url("../images/bg.jpg") no-repeat fixed;
+    padding:1px;
+    box-sizing:border-box;
+}
+.content:after{
+    content: "";
+    width:100%;
+    height:100%;
+    position: absolute;
+    left:0;
+    top:0;
+    background: inherit;
+    filter: blur(2px);
+    z-index: 2;
+}
 
 .jumbotron {
     background: #4183c4;
